--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body id="main">
     <header>
-      <h1 id="title">ARSENE WENGER</h1>
+      <h1 id="title">ARSENE CHARLES ERNEST WENGER</h1>
       <h2>MR INVINCIBLE</h2>
     </header>
     <figure id="img-div">
@@ -23,8 +23,11 @@
         English Premier Leageue
       </figcaption>
     </figure>
-    <article id="tribute-info"> 
-     <h2>Here"s a time line of Arsene Wengers Career:</h2>
+    <article id="tribute-info">
+      <h2>Here"s a time line of Arsene Wengers Career:</h2>
+      <ul>
+        <li></li>
+      </ul>
     </article>
   </body>
 </html>
