--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body id="main">
     <header>
       <h1 id="title">ARSENE CHARLES ERNEST WENGER</h1>
-      <h2>MR INVINCIBLE</h2>
+      <h2>The man who changed Arsenal football club</h2>
     </header>
     <figure id="img-div">
       <img
@@ -26,7 +26,36 @@
     <article id="tribute-info">
       <h2>Here"s a time line of Arsene Wengers Career:</h2>
       <ul>
-        <li></li>
+        <li>1949 October - Arsene was born.</li>
+        <li>
+          1973 - Arsene started his senior professional football career at
+          Mullhouse where he made 56 appearances and scored 5 goals.
+        </li>
+        <li>
+          1975 - He moved ASPV Strasbourg but unfortunately he wasn't able to
+          get into the team and has to leave after 3 years.
+        </li>
+        <li>
+          1978 - Arsene's final final RC Strasbourg where he made 11
+          appearances.
+        </li>
+        <li>
+          1981 - At this point Mr wenger decided to retire from professional
+          football.
+        </li>
+        <li>
+          1984 - In 1984 Arsene decided to go back into professional football
+          but this as a football manager. The first football team managed by
+          Arsene Wenger was Nancy.
+        </li>
+        <li>
+          1987 - In 1987 Nancy got relegated and Arsene had the permission to
+          break out of his contract and move to monaco. He managed monaco for
+          seven years before he was sacked from his job.
+        </li>
+        <li>
+         
+        </li>
       </ul>
     </article>
   </body>
