--- a/index.html
+++ b/index.html
@@ -54,9 +54,64 @@
           seven years before he was sacked from his job.
         </li>
         <li>
-         
+          1995 - He was in china managing Nagoya Grampus Eight then after
+          calling after one year.
+        </li>
+        <li>
+          1996 - Arsenal appointed Arsene Wenger as there manager. This was
+          greeted with great perplexity by the clubs players and supporters
+          simply he was not a well known manager and he had not had a lot of
+          success in the past. He won his first game in charge against blackburn
+          2-0.
+        </li>
+        <li>
+          1997 - Arsenal started getting rewards of the risk they took with
+          appointing Arsene Wenger.
+        </li>
+        <li>
+          1998 - He improved the clubs playing style and also led the club to a
+          Premier League and Fa cup double at the end of his first full season.
+          He was also the first foreign manager to achieve this feet.
+        </li>
+        <li>
+          2003 - Arsene greatest achievement came in the year 2003-2004 where he
+          set up a team that the whole premier league season unbeaten. A feet
+          still yet to be achieved by any other premier league team.
+        </li>
+        <li>
+          2006 - From the year 2006 things became difficult for Arsene at
+          arsenal. They left highbury and moved to nearby Emirates stadium. A
+          lot of money was invested into this and it became difficult for
+          arsenal to compete with other teams in the league because didn't have
+          enoungh money to strengthen the tema
+        </li>
+        <li>
+          2010 - Despite the financial difficulties Arsene stayed at arsenal and
+          still managed the team and continued to improved them as much as he
+          could.
+        </li>
+        <li>
+          2017 - In 2017 came the angry years where the accept how the club was
+          being run. The fans wanted trophies and success but unfortunately
+          Arsene wasn't able to offer that.
+        </li>
+        <li>
+          2018 - Arsene was relieved of his duty but till date he still remains
+          Arsenal's greatest manager after spending 24 years managing the
+          greatest football club in London.
         </li>
       </ul>
+      Arsene Wenger's achievement at Arsenal in unmatchable and till today
+      remains the longest serving manager in the history of the Premier league.
+      Only Sir Alex Ferguson of Manchester United comes close.
     </article>
+    <footer>
+      <p>
+        If you have more you can read more about Arsene Wenger:
+        <a href="https://en.wikipedia.org/wiki/Arsène_Wenger#Early_life"
+          >wikipedia</a
+        >
+      </p>
+    </footer>
   </body>
 </html>
