--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </figure>
     <article id="tribute-info">
       <h2>Here"s a time line of Arsene Wengers Career:</h2>
-      <ul>
+      <ul class="timeline">
         <li>1949 October - Arsene was born.</li>
         <li>
           1973 - Arsene started his senior professional football career at
@@ -106,9 +106,11 @@
       Only Sir Alex Ferguson of Manchester United comes close.
     </article>
     <footer>
-      <p>
+      <p id="tribute-link">
         If you have more you can read more about Arsene Wenger:
-        <a href="https://en.wikipedia.org/wiki/Arsène_Wenger#Early_life"
+        <a
+          href="https://en.wikipedia.org/wiki/Arsène_Wenger#Early_life"
+          target="_blank"
           >wikipedia</a
         >
       </p>
