--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
       <h1 id="title">ARSENE CHARLES ERNEST WENGER</h1>
       <h2>The man who changed Arsenal football club</h2>
     </header>
+
+    <ul class="nu">
+      <li>gjsmgz</li>
+      <li>fesjfnsadf</li>
+      <li>ajfefaje</li>
+    </ul>
     <figure id="img-div">
       <img
         id="image"
@@ -24,83 +30,127 @@
       </figcaption>
     </figure>
     <article id="tribute-info">
-      <h2>Here"s a time line of Arsene Wengers Career:</h2>
-      <ul class="timeline">
-        <li>1949 October - Arsene was born.</li>
-        <li>
-          1973 - Arsene started his senior professional football career at
-          Mullhouse where he made 56 appearances and scored 5 goals.
-        </li>
-        <li>
-          1975 - He moved ASPV Strasbourg but unfortunately he wasn't able to
-          get into the team and has to leave after 3 years.
-        </li>
-        <li>
-          1978 - Arsene's final final RC Strasbourg where he made 11
-          appearances.
-        </li>
-        <li>
-          1981 - At this point Mr wenger decided to retire from professional
-          football.
-        </li>
-        <li>
-          1984 - In 1984 Arsene decided to go back into professional football
-          but this as a football manager. The first football team managed by
-          Arsene Wenger was Nancy.
-        </li>
-        <li>
-          1987 - In 1987 Nancy got relegated and Arsene had the permission to
-          break out of his contract and move to monaco. He managed monaco for
-          seven years before he was sacked from his job.
-        </li>
-        <li>
-          1995 - He was in china managing Nagoya Grampus Eight then after
-          calling after one year.
-        </li>
-        <li>
-          1996 - Arsenal appointed Arsene Wenger as there manager. This was
-          greeted with great perplexity by the clubs players and supporters
-          simply he was not a well known manager and he had not had a lot of
-          success in the past. He won his first game in charge against blackburn
-          2-0.
-        </li>
-        <li>
-          1997 - Arsenal started getting rewards of the risk they took with
-          appointing Arsene Wenger.
-        </li>
-        <li>
-          1998 - He improved the clubs playing style and also led the club to a
-          Premier League and Fa cup double at the end of his first full season.
-          He was also the first foreign manager to achieve this feet.
-        </li>
-        <li>
-          2003 - Arsene greatest achievement came in the year 2003-2004 where he
-          set up a team that the whole premier league season unbeaten. A feet
-          still yet to be achieved by any other premier league team.
-        </li>
-        <li>
-          2006 - From the year 2006 things became difficult for Arsene at
-          arsenal. They left highbury and moved to nearby Emirates stadium. A
-          lot of money was invested into this and it became difficult for
-          arsenal to compete with other teams in the league because didn't have
-          enoungh money to strengthen the tema
-        </li>
-        <li>
-          2010 - Despite the financial difficulties Arsene stayed at arsenal and
-          still managed the team and continued to improved them as much as he
-          could.
-        </li>
-        <li>
-          2017 - In 2017 came the angry years where the accept how the club was
-          being run. The fans wanted trophies and success but unfortunately
-          Arsene wasn't able to offer that.
-        </li>
-        <li>
-          2018 - Arsene was relieved of his duty but till date he still remains
-          Arsenal's greatest manager after spending 24 years managing the
-          greatest football club in London.
-        </li>
-      </ul>
+      <h2>Here's a time line of Arsene Wengers Career:</h2>
+      <br /><br />
+      <br />
+      <br />
+      <!-- beginning of timeline dates -->
+      <div>
+        <ul class="timeline">
+          <li><strong>1949</strong> October - Arsene was born.</li>
+          <br />
+          <br />
+          <li>
+            <strong>1973</strong> - Arsene started his senior professional
+            football career at Mullhouse where he made 56 appearances and scored
+            5 goals.
+          </li>
+          <br />
+          <br />
+          <li>
+            <strong>1975</strong> - He moved ASPV Strasbourg but unfortunately
+            he wasn't able to get into the team and has to leave after 3 years.
+          </li>
+          <br />
+          <br />
+          <li>
+            <strong>1978</strong> - Arsene's final final RC Strasbourg where he
+            made 11 appearances.
+          </li>
+          <br />
+          <br />
+          <li>
+            <strong>1981</strong> - At this point Mr wenger decided to retire
+            from professional football.
+          </li>
+          <br />
+          <br />
+          <li>
+            <strong>1984</strong> - In 1984 Arsene decided to go back into
+            professional football but this as a football manager. The first
+            football team managed by Arsene Wenger was Nancy.
+          </li>
+          <br />
+          <br />
+          <li>
+            <strong>1987</strong> - In 1987 Nancy got relegated and Arsene had
+            the permission to break out of his contract and move to monaco. He
+            managed monaco for seven years before he was sacked from his job.
+          </li>
+          <br />
+          <br />
+          <li>
+            <strong>1995</strong> - He was in china managing Nagoya Grampus
+            Eight then after calling after one year.
+          </li>
+          <br />
+          <br />
+          <li>
+            <strong>1996</strong> - Arsenal appointed Arsene Wenger as there
+            manager. This was greeted with great perplexity by the clubs players
+            and supporters simply he was not a well known manager and he had not
+            had a lot of success in the past. He won his first game in charge
+            against blackburn 2-0.
+          </li>
+          <br />
+          <br />
+          <li>
+            <strong>1997</strong> - Arsenal started getting rewards of the risk
+            they took with appointing Arsene Wenger.
+          </li>
+          <br />
+          <br />
+          <li>
+            <strong>1998</strong> - He improved the clubs playing style and also
+            led the club to a Premier League and Fa cup double at the end of his
+            first full season. He was also the first foreign manager to achieve
+            this feet.
+          </li>
+          <br />
+          <br />
+          <li>
+            <strong>2003</strong> - Arsene greatest achievement came in the year
+            2003-2004 where he set up a team that the whole premier league
+            season unbeaten. A feet still yet to be achieved by any other
+            premier league team.
+          </li>
+          <br />
+          <br />
+          <li>
+            <strong>2006</strong> - From the year 2006 things became difficult
+            for Arsene at arsenal. They left highbury and moved to nearby
+            Emirates stadium. A lot of money was invested into this and it
+            became difficult for arsenal to compete with other teams in the
+            league because didn't have enoungh money to strengthen the tema
+          </li>
+          <br />
+          <br />
+          <li>
+            <strong>2010</strong> - Despite the financial difficulties Arsene
+            stayed at arsenal and still managed the team and continued to
+            improved them as much as he could.
+          </li>
+          <br />
+          <br />
+          <li>
+            <strong>2017</strong> - In 2017 came the angry years where the
+            accept how the club was being run. The fans wanted trophies and
+            success but unfortunately Arsene wasn't able to offer that.
+          </li>
+          <br />
+          <br />
+          <li>
+            <strong>2018</strong> - Arsene was relieved of his duty but till
+            date he still remains Arsenal's greatest manager after spending 24
+            years managing the greatest football club in London.
+          </li>
+          <br />
+          <br />
+        </ul>
+      </div>
+      <br />
+      <br />
+
       Arsene Wenger's achievement at Arsenal in unmatchable and till today
       remains the longest serving manager in the history of the Premier league.
       Only Sir Alex Ferguson of Manchester United comes close.
