--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <!-- beginning of timeline dates -->
 
       <ul class="timeline">
-        <li><strong>1949</strong> October - Arsene was born.</li>
+        <li><strong>1949</strong> - Arsene was born.</li>
         <br />
         <br />
         <li>
@@ -44,14 +44,14 @@
         <br />
         <br />
         <li>
-          <strong>1975</strong> - He moved ASPV Strasbourg but unfortunately he
-          wasn't able to get into the team and has to leave after 3 years.
+          <strong>1975</strong> - He moved to ASPV Strasbourg but unfortunately
+          he wasn't able to get into the team and had to leave after 3 years.
         </li>
         <br />
         <br />
         <li>
-          <strong>1978</strong> - Arsene's final final RC Strasbourg where he
-          made 11 appearances.
+          <strong>1978</strong> - Arsene's final proffessional football club was
+          RC Strasbourg where he made 11 appearances.
         </li>
         <br />
         <br />
@@ -63,30 +63,30 @@
         <br />
         <li>
           <strong>1984</strong> - In 1984 Arsene decided to go back into
-          professional football but this as a football manager. The first
+          professional football but this time as a football manager. The first
           football team managed by Arsene Wenger was Nancy.
         </li>
         <br />
         <br />
         <li>
           <strong>1987</strong> - In 1987 Nancy got relegated and Arsene had the
-          permission to break out of his contract and move to monaco. He managed
+          permission to break out of his contract and move to Monaco. He managed
           monaco for seven years before he was sacked from his job.
         </li>
         <br />
         <br />
         <li>
-          <strong>1995</strong> - He was in china managing Nagoya Grampus Eight
+          <strong>1995</strong> - He was in China managing Nagoya Grampus Eight
           then after calling after one year.
         </li>
         <br />
         <br />
         <li>
           <strong>1996</strong> - Arsenal appointed Arsene Wenger as there
-          manager. This was greeted with great perplexity by the clubs players
-          and supporters simply he was not a well known manager and he had not
-          had a lot of success in the past. He won his first game in charge
-          against blackburn 2-0.
+          manager. This was greeted with great perplexity by the club's players
+          and supporters simply because he was not a well known manager and he
+          had not had a lot of success in the past. He won his first game in
+          charge against blackburn 2-0.
         </li>
         <br />
         <br />
@@ -98,40 +98,41 @@
         <br />
         <li>
           <strong>1998</strong> - He improved the clubs playing style and also
-          led the club to a Premier League and Fa cup double at the end of his
-          first full season. He was also the first foreign manager to achieve
-          this feet.
+          led the club to a Premier League title and Fa cup double at the end of
+          his first full season. He was also the first foreign manager to
+          achieve this feet.
         </li>
         <br />
         <br />
         <li>
-          <strong>2003</strong> - Arsene greatest achievement came in the year
-          2003-2004 where he set up a team that the whole premier league season
-          unbeaten. A feet still yet to be achieved by any other premier league
-          team.
+          <strong>2003</strong> - Arsene's greatest achievement came in the year
+          2003-2004 where he set up a team that went the whole premier league
+          season unbeaten. A feet still yet to be achieved by any other premier
+          league team.
         </li>
         <br />
         <br />
         <li>
           <strong>2006</strong> - From the year 2006 things became difficult for
-          Arsene at arsenal. They left highbury and moved to nearby Emirates
-          stadium. A lot of money was invested into this and it became difficult
-          for arsenal to compete with other teams in the league because didn't
-          have enoungh money to strengthen the tema
+          Arsene at arsenal. They left highbury stadium and moved to nearby
+          Emirates stadium. A lot of money was invested into this and it became
+          difficult for arsenal to compete with other teams in the league
+          because didn't have enoungh money to strengthen the tema
         </li>
         <br />
         <br />
         <li>
           <strong>2010</strong> - Despite the financial difficulties Arsene
-          stayed at arsenal and still managed the team and continued to improved
+          stayed at arsenal and still managed the team and continued to improve
           them as much as he could.
         </li>
         <br />
         <br />
         <li>
-          <strong>2017</strong> - In 2017 came the angry years where the accept
-          how the club was being run. The fans wanted trophies and success but
-          unfortunately Arsene wasn't able to offer that.
+          <strong>2017</strong> - This came the angry years where the fans
+          refused to accept how the club was being managed. The fans wanted
+          trophies and success but unfortunately Arsene wasn't able to offer
+          that.
         </li>
         <br />
         <br />
@@ -147,7 +148,7 @@
       <br />
       <br />
 
-      Arsene Wenger's achievement at Arsenal in unmatchable and till today
+      Arsene Wenger's achievement at Arsenal in unmatchable and till today he
       remains the longest serving manager in the history of the Premier league.
       Only Sir Alex Ferguson of Manchester United comes close.
     </article>
@@ -155,7 +156,8 @@
       <p>
         If you have more you can read more about Arsene Wenger:
         <!-- A link to where you can read more about Arsene Wenger -->
-        <a id="tribute-link"
+        <a
+          id="tribute-link"
           href="https://en.wikipedia.org/wiki/Arsène_Wenger#Early_life"
           target="_blank"
           >wikipedia</a
